[gd_scene load_steps=26 format=3 uid="uid://cpnq6w7rd0t4s"]

[ext_resource type="Script" uid="uid://4c3rd8dbgl06" path="res://Game/UI/Main_Menu/main_menu.gd" id="1_lbcms"]
[ext_resource type="Theme" uid="uid://bntmjk2bdh7jq" path="res://Assets/Themes/buttons.tres" id="2_jeudw"]
[ext_resource type="PackedScene" uid="uid://bnd4grscn3fu7" path="res://Game/eyes_overlay.tscn" id="2_tocna"]
[ext_resource type="Shader" uid="uid://u2dwbqcvgxi2" path="res://Game/UI/Fire.gdshader" id="3_2v1u4"]
[ext_resource type="FontFile" uid="uid://dvm2yjkxfdb1h" path="res://Assets/Fonts/sanctuary.regular.ttf" id="3_nvbf8"]
[ext_resource type="Shader" uid="uid://dluhyfmups6qu" path="res://Assets/Shaders/eyes_overlay.gdshader" id="4_iadss"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v6bwl"]
shader = ExtResource("4_iadss")
shader_parameter/radius = 0.705
shader_parameter/speed = 2.461
shader_parameter/effect_color = Color(0, 0.25, 0.245833, 1)

[sub_resource type="Gradient" id="Gradient_f6kd6"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uaqro"]
gradient = SubResource("Gradient_f6kd6")

[sub_resource type="Gradient" id="Gradient_0bgwi"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.508197, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 0.938, 0.69, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_12p6u"]
gradient = SubResource("Gradient_0bgwi")

[sub_resource type="Curve" id="Curve_f6kd6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.0661765, 0), 0.0, 0.0, 0, 0, Vector2(0.125, 1), 0.0, 0.0, 0, 0, Vector2(0.220588, 0), 0.0, 0.0, 0, 0, Vector2(0.286765, 1), 0.0, 0.0, 0, 0, Vector2(0.367647, 0), 0.0, 0.0, 0, 0, Vector2(0.433824, 1), 0.0, 0.0, 0, 0, Vector2(0.522059, 0), 0.0, 0.0, 0, 0, Vector2(0.551471, 1), 0.0, 0.0, 0, 0, Vector2(0.647059, 0), 0.0, 0.0, 0, 0, Vector2(0.691177, 1), 0.0, 0.0, 0, 0, Vector2(0.808824, 0), 0.0, 0.0, 0, 0, Vector2(0.823529, 1), 0.0, 0.0, 0, 0, Vector2(0.941177, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 15

[sub_resource type="CurveTexture" id="CurveTexture_jeudw"]
resource_local_to_scene = true
curve = SubResource("Curve_f6kd6")

[sub_resource type="Curve" id="Curve_7k211"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, -10.989), 0.0, 0.0, 0, 0, Vector2(0.16, 46.1538), 0.0, 0.0, 0, 0, Vector2(0.313333, -15.3846), 0.0, 0.0, 0, 0, Vector2(0.433333, 32.967), 0.0, 0.0, 0, 0, Vector2(0.606667, -19.7802), 0.0, 0.0, 0, 0, Vector2(0.773333, 28.5714), 0.0, 0.0, 0, 0, Vector2(0.886667, -28.5714), 0.0, 0.0, 0, 0, Vector2(1, 37.3626), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="CurveTexture" id="CurveTexture_dha20"]
curve = SubResource("Curve_7k211")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nvbf8"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(640, 360, 1)
direction = Vector3(-1, 0, 0)
spread = 20.0
initial_velocity_min = 20.0
initial_velocity_max = 80.0
gravity = Vector3(-200, 20, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 6.0
tangential_accel_curve = SubResource("CurveTexture_dha20")
damping_max = 100.0
scale_min = 1.5
scale_max = 1.8
scale_curve = SubResource("CurveTexture_jeudw")
color_ramp = SubResource("GradientTexture1D_12p6u")
color_initial_ramp = SubResource("GradientTexture1D_uaqro")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iadss"]
resource_local_to_scene = true
shader = ExtResource("3_2v1u4")
shader_parameter/fire_color = Color(0.270634, 0.586866, 0.288545, 1)
shader_parameter/fire_power_factor = 5.15
shader_parameter/fire_intensity = 3.565
shader_parameter/fire_start = 0.955
shader_parameter/ball_size = 0.74
shader_parameter/roughness = 0.355
shader_parameter/detail = 6
shader_parameter/scale = 4.0
shader_parameter/lacunarity = 2.0

[sub_resource type="Gradient" id="Gradient_2v1u4"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_b7oqe"]
gradient = SubResource("Gradient_2v1u4")

[sub_resource type="Curve" id="Curve_v6bwl"]
_limits = [-200.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, -10.989), 0.0, 0.0, 0, 0, Vector2(0.16, 46.1538), 0.0, 0.0, 0, 0, Vector2(0.313333, -15.3846), 0.0, 0.0, 0, 0, Vector2(0.433333, 32.967), 0.0, 0.0, 0, 0, Vector2(0.606667, -19.7802), 0.0, 0.0, 0, 0, Vector2(0.773333, 28.5714), 0.0, 0.0, 0, 0, Vector2(0.886667, -28.5714), 0.0, 0.0, 0, 0, Vector2(1, 37.3626), 0.0, 0.0, 0, 0]
point_count = 8

[sub_resource type="CurveTexture" id="CurveTexture_cq8a2"]
curve = SubResource("Curve_v6bwl")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jeudw"]
resource_local_to_scene = true
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(30, 30, 1)
direction = Vector3(-1, 0, 0)
spread = 20.0
initial_velocity_min = 20.0
initial_velocity_max = 80.0
gravity = Vector3(0, -200, 0)
tangential_accel_min = -2.23517e-06
tangential_accel_max = 6.0
tangential_accel_curve = SubResource("CurveTexture_cq8a2")
damping_max = 100.0
scale_min = 1.5
scale_max = 1.8
color = Color(0.714368, 1, 0.757032, 1)
color_initial_ramp = SubResource("GradientTexture1D_b7oqe")

[sub_resource type="Animation" id="Animation_nvbf8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../../ColorRect2:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.705]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../Label4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(104, 45)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../../VBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(513, 481)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.21)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../../ColorRect2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../../Fire:material:shader_parameter/fire_power_factor")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.15]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../../Fire2:material:shader_parameter/fire_power_factor")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.15]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../../GPUParticles2D:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../../../GPUParticles2D2:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jeudw"]
resource_name = "Start"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../../ColorRect2:material:shader_parameter/radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(2.21914, 1),
"update": 0,
"values": [0.705, -0.355]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../Label4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.176777, 1),
"update": 0,
"values": [Vector2(104, 45), Vector2(104, -200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../../../VBoxContainer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(0.210224, 1),
"update": 0,
"values": [Vector2(513, 481), Vector2(513, 740.93)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 0.21), Vector2(1, 0.995)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../../../ColorRect2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../../../Fire:material:shader_parameter/fire_power_factor")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2.72),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [5.15]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../../Fire2:material:shader_parameter/fire_power_factor")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(2.72, 2.82, 2.91),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [5.15, 9.885, 23.4]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../../GPUParticles2D:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2.86),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../../../GPUParticles2D2:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.86),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xpodn"]
_data = {
&"RESET": SubResource("Animation_nvbf8"),
&"Start": SubResource("Animation_jeudw")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbcms")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 3880
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = 121.0
offset_right = 127.0
offset_bottom = 307.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_jeudw")
theme_override_colors/font_outline_color = Color(0.0588235, 0.137255, 0.12549, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("3_nvbf8")
theme_override_font_sizes/font_size = 121
text = "Start
"

[node name="Settings" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Credits
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_jeudw")
theme_override_colors/font_outline_color = Color(0.0588235, 0.137255, 0.12549, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_nvbf8")
theme_override_font_sizes/font_size = 76
text = "Quit"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2955
layout_mode = 0
offset_left = -7.0
offset_top = 13.0
offset_right = 1313.0
offset_bottom = 777.0
mouse_filter = 2
color = Color(0.0593615, 0.139335, 0.127076, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 65
material = SubResource("ShaderMaterial_v6bwl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label4" type="Label" parent="."]
z_index = 75
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -536.0
offset_top = 45.0
offset_right = 537.0
offset_bottom = 189.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.0588235, 0.137255, 0.12549, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_nvbf8")
theme_override_font_sizes/font_size = 156
text = "The Goblin Assassin"

[node name="EyesOverlay" parent="." instance=ExtResource("2_tocna")]
script = null

[node name="LeftEye" parent="EyesOverlay/MouseFollow/EyeNormal" index="2"]
visible = false

[node name="RightEye" parent="EyesOverlay/MouseFollow/EyeNormal" index="3"]
visible = false

[node name="EyelidNormal" parent="EyesOverlay/MouseFollow" index="1"]
scale = Vector2(1, 0.21)

[node name="GPUParticles2D" parent="EyesOverlay/CanvasLayer/ThoughtBubble" index="2"]
process_material = SubResource("ParticleProcessMaterial_nvbf8")

[node name="Label2" parent="EyesOverlay/CanvasLayer/ThoughtBubble" index="7"]
visible = false

[node name="Fire" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_iadss")
layout_mode = 0
offset_left = 1290.0
offset_top = -59.0
offset_right = 1787.0
offset_bottom = 511.0
rotation = 1.5708
mouse_filter = 2

[node name="Fire2" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_iadss")
layout_mode = 0
offset_left = 563.0
offset_top = -63.0
offset_right = 1060.0
offset_bottom = 507.0
rotation = 1.5708
mouse_filter = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(279, 378)
rotation = 1.5708
amount = 40
lifetime = 5.0
preprocess = 2.0
randomness = 1.0
trail_lifetime = 0.6
process_material = SubResource("ParticleProcessMaterial_jeudw")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(1005, 378)
rotation = 1.5708
amount = 40
lifetime = 5.0
preprocess = 2.0
randomness = 1.0
trail_lifetime = 0.6
process_material = SubResource("ParticleProcessMaterial_jeudw")

[node name="Start" type="AnimationPlayer" parent="."]
root_node = NodePath("../EyesOverlay/MouseFollow/EyelidNormal")
libraries = {
&"": SubResource("AnimationLibrary_xpodn")
}

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="Start" to="." method="_on_start_animation_finished"]

[editable path="EyesOverlay"]
[editable path="EyesOverlay/CanvasLayer/ThoughtBubble"]
